--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
+    <div style="display: none;">
+      <include src="build/img/sprite.svg"></include>
+    </div>
+
     <header class="page-header feedback">
       <nav class="main-nav main-nav--opened main-nave--nojs">
         <a class="main-nav__logo" href="index.html">
@@ -32,7 +36,7 @@
           <li class="user-list__item user-list__item--search">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px" role="img" aria-label="Поиск по сайту" focusable="false">
-                <use xlink:href="img/sprite.svg#search"></use>
+                <use xlink:href="#icon-search"></use>
               </svg>
               <span class="user-list__link--note">Поиск по сайту</span>
             </a>
@@ -40,7 +44,7 @@
           <li class="user-list__item user-list__item--cart">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--cart" width="21px" height="18px">
-                <use xlink:href="img/sprite.svg#cart"></use>
+                <use xlink:href="#icon-cart"></use>
               </svg>
               <span>Корзина: пока пуста</span>
             </a>
@@ -88,7 +92,7 @@
                   <span class="catalog-list__price">1 200 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
-                      <use xlink:href="img/sprite.svg#cart"></use>
+                      <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
                 </div>
@@ -116,7 +120,7 @@
                   <span class="catalog-list__price">690 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
-                      <use xlink:href="img/sprite.svg#cart"></use>
+                      <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
                 </div>
@@ -144,7 +148,7 @@
                   <span class="catalog-list__price">1 500 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
-                      <use xlink:href="img/sprite.svg#cart"></use>
+                      <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
                 </div>
@@ -170,7 +174,7 @@
 
             <button class="process__button" type="button" aria-label="Воспроизвести">
               <svg width="100.678px" height="76.891px">
-                <use xlink:href="img/sprite.svg#video"></use>
+                <use xlink:href="#icon-video"></use>
               </svg>
             </button>
           </div>
@@ -189,7 +193,7 @@
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo" href="index.html">
           <svg id="logo-color" width="101.615px" height="34.056px" aria-label="Логотип-ссылка на главную страницу интернет-магазина">
-            <use xlink:href="img/sprite.svg#logo-color"></use>
+            <use xlink:href="#logo-footer"></use>
           </svg>
         </a>
         <div class="page-footer__social social">
@@ -197,21 +201,21 @@
             <li class="social__item">
               <a class="social__link social__link--instagram" href="#" aria-label="Instagram">
                 <svg width="21.769px" height="21.334px">
-                  <use xlink:href="img/sprite.svg#insta"></use>
+                  <use xlink:href="#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="#" aria-label="Facebook">
                 <svg width="14.962px" height="27.718px">
-                  <use xlink:href="img/sprite.svg#fb"></use>
+                  <use xlink:href="#icon-fb"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#" aria-label="Twitter">
                 <svg width="23.494px" height="20.168px">
-                  <use xlink:href="img/sprite.svg#twit"></use>
+                  <use xlink:href="#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -221,7 +225,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__link--text">Разработано</span>
             <svg class="copyright__link--img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
-              <use xlink:href="img/sprite.svg#html-academy"></use>
+              <use xlink:href="#logo-htmlacademy"></use>
             </svg>
           </a>
         </div>
