--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,9 @@
     <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Мишка</title>
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="fonts/opensans.woff2" as="font">
   </head>
+
   <body>
     <div style="display: none;">
       <include src="build/img/sprite.svg"></include>
