--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Мишка</title>
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="fonts/opensans.woff2" as="font">
   </head>
   <body>
     <div style="display: none;">
