--- a/source/index.html
+++ b/source/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="promo__description-wrap">
             <p class="promo__description">
-              Экологически чистая пряжа,<br> ручная работа.
+              Экологически чистая пряжа, ручная работа.
               Доступны в шести расцветках и трёх размерах.
             </p>
             <table class="promo__specif specif-list">
@@ -261,8 +261,8 @@
         </div>
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="copyright__link--text">Разработано</span>
-            <svg class="copyright__link--img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
+            <span class="copyright__link-text">Разработано</span>
+            <svg class="copyright__link-img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
               <use xlink:href="#logo-htmlacademy"></use>
             </svg>
           </a>
