--- a/source/form.html
+++ b/source/form.html
@@ -262,8 +262,8 @@
         </div>
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="copyright__link--text">Разработано</span>
-            <svg class="copyright__link--img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
+            <span class="copyright__link-text">Разработано</span>
+            <svg class="copyright__link-img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
               <use xlink:href="#logo-htmlacademy"></use>
             </svg>
           </a>
