--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
     </div>
 
     <header class="page-header feedback">
-      <nav class="main-nav main-nav--opened main-nave--nojs">
+      <nav class="main-nav main-nav--closed main-nave--nojs">
         <a class="main-nav__logo" href="index.html">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -37,7 +37,7 @@
         <ul class="main-nav__list user-list">
           <li class="user-list__item user-list__item--search">
             <a class="user-list__link title-inner" href="#">
-              <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px" role="img" aria-label="Поиск по сайту" focusable="false">
+              <svg class="user-list__link-icon user-list__link-icon--search" width="18" height="18" role="img" aria-label="Поиск по сайту" focusable="false">
                 <use xlink:href="#icon-search"></use>
               </svg>
               <span class="user-list__link--note">Поиск по сайту</span>
@@ -45,7 +45,7 @@
           </li>
           <li class="user-list__item user-list__item--cart">
             <a class="user-list__link title-inner" href="#">
-              <svg class="user-list__link-icon user-list__link-icon--cart" width="21px" height="18px">
+              <svg class="user-list__link-icon user-list__link-icon--cart" width="20" height="19">
                 <use xlink:href="#icon-cart"></use>
               </svg>
               <span>Корзина: пока пуста</span>
@@ -93,7 +93,7 @@
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">1 200 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
-                    <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
+                    <svg class="catalog-list__button--cart" width="20" height="19">
                       <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
@@ -121,7 +121,7 @@
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">690 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
-                    <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
+                    <svg class="catalog-list__button--cart" width="20" height="19">
                       <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
@@ -149,7 +149,7 @@
                 <div class="catalog-list__wrap catalog-list__wrap">
                   <span class="catalog-list__price">1 500 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
-                    <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
+                    <svg class="catalog-list__button--cart" width="20" height="19">
                       <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
@@ -194,7 +194,7 @@
     <footer class="page-footer feedback">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo" href="index.html">
-          <svg id="logo-color" width="101.615px" height="34.056px" aria-label="Логотип-ссылка на главную страницу интернет-магазина">
+          <svg id="logo-color" width="101" height="34" aria-label="Логотип-ссылка на главную страницу интернет-магазина">
             <use xlink:href="#logo-footer"></use>
           </svg>
         </a>
@@ -202,21 +202,21 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--instagram" href="#" aria-label="Instagram">
-                <svg width="21.769px" height="21.334px">
+                <svg width="22" height="21">
                   <use xlink:href="#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="#" aria-label="Facebook">
-                <svg width="14.962px" height="27.718px">
+                <svg width="15" height="28">
                   <use xlink:href="#icon-fb"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#" aria-label="Twitter">
-                <svg width="23.494px" height="20.168px">
+                <svg width="23" height="20">
                   <use xlink:href="#icon-twitter"></use>
                 </svg>
               </a>
@@ -226,7 +226,7 @@
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__link-text">Разработано</span>
-            <svg class="copyright__link-img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
+            <svg class="copyright__link-img" aria-label="HTML и CSS, уровень 2" width="27" height="34">
               <use xlink:href="#logo-htmlacademy"></use>
             </svg>
           </a>
