правки по Б11 форма

--- a/source/form.html
+++ b/source/form.html
@@ -159,9 +159,9 @@
             </div>
           </fieldset>
 
-          <fieldset class="order-form__field">
+          <fieldset class="order-form__field order-form__field--fullname">
             <div class="order-form__wrapper order-form__wrapper--fullname wrapper">
-              <h3 class="order-form__name">ФИО</h3>
+              <h3 class="order-form__name order-form__name--fullname">ФИО</h3>
               <ul class="order-form__set order-form__set--fullname">
 
                 <li class="order-form__item order-form__item-user">
@@ -191,7 +191,7 @@
           <div class="order-form__field-user">
             <fieldset class="order-form__field  order-form__field--tel">
               <div class="order-form__wrapper order-form__wrapper--tel wrapper">
-                <h3 class="order-form__name">Тел</h3>
+                <h3 class="order-form__name order-form__name--tel">Тел</h3>
 
                   <label class="order-form__icon order-form__sign-user">
                     <svg class="order-form__icon--tel" width="25" height="24">
