--- a/source/catalog.html
+++ b/source/catalog.html
@@ -177,7 +177,7 @@
             </picture>
 
             <button class="process__button" type="button" aria-label="Воспроизвести">
-              <svg width="100.678px" height="76.891px">
+              <svg width="100.678px" height="77">
                 <use xlink:href="#icon-play"></use>
               </svg>
             </button>
