--- a/source/catalog.html
+++ b/source/catalog.html
@@ -177,7 +177,7 @@
             </picture>
 
             <button class="process__button" type="button" aria-label="Воспроизвести">
-              <svg width="100.678px" height="77">
+              <svg width="100" height="77">
                 <use xlink:href="#icon-play"></use>
               </svg>
             </button>
@@ -209,6 +209,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="social__item">
               <a class="social__link social__link--facebook" href="#" aria-label="Facebook">
                 <svg width="15" height="28">
@@ -216,6 +217,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#" aria-label="Twitter">
                 <svg width="23" height="20">
@@ -225,6 +227,7 @@
             </li>
           </ul>
         </div>
+
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__link-text">Разработано</span>
