--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,7 +42,7 @@
               <svg class="user-list__link-icon user-list__link-icon--search" width="18" height="18" role="img" aria-label="Поиск по сайту" focusable="false">
                 <use xlink:href="#icon-search"></use>
               </svg>
-              <span class="user-list__link--note">Поиск по сайту</span>
+              <span class="user-list__link-note">Поиск по сайту</span>
             </a>
           </li>
           <li class="user-list__item user-list__item--cart">
@@ -76,7 +76,7 @@
         <div class="catalog-inner__wrapper wrapper">
           <ul class="catalog-inner__list catalog-list">
             <li class="catalog-list__item">
-              <a class="catalog-list__link--img" href="#">
+              <a href="#">
                 <picture>
                   <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
@@ -95,7 +95,7 @@
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">1 200 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
-                    <svg class="catalog-list__button--cart" width="20" height="19">
+                    <svg class="catalog-list__icon-cart" width="20" height="19">
                       <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
@@ -104,7 +104,7 @@
             </li>
 
             <li class="catalog-list__item">
-              <a class="catalog-list__link--img" href="#">
+              <a href="#">
                 <picture>
                   <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
@@ -117,13 +117,13 @@
               </a>
               <div class="catalog-list__desc">
                 <a class="catalog-list__link" href="#">
-                  <h3 class="title-inner catalog-list__name">Корзинка для белья</h3>
+                  <h3 class="catalog-list__name title-inner">Корзинка для белья</h3>
                 </a>
-                <p class="description-inner catalog-list__description">Диаметр 15 см, высота 10 см</p>
+                <p class="catalog-list__description description-inner">Диаметр 15 см, высота 10 см</p>
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">690 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
-                    <svg class="catalog-list__button--cart" width="20" height="19">
+                    <svg class="catalog-list__icon-cart" width="20" height="19">
                       <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
@@ -132,7 +132,7 @@
             </li>
 
             <li class="catalog-list__item">
-              <a class="catalog-list__link--img" href="#">
+              <a href="#">
                 <picture>
                   <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
@@ -148,10 +148,10 @@
                   <h3 class="catalog-list__name title-inner">Большая корзинка<br> для игрушек</h3>
                 </a>
                 <p class="catalog-list__description catalog-list__description--toys description-inner">Диаметр 30 см, высота 30см</p>
-                <div class="catalog-list__wrap catalog-list__wrap">
+                <div class="catalog-list__wrap">
                   <span class="catalog-list__price">1 500 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
-                    <svg class="catalog-list__button--cart" width="20" height="19">
+                    <svg class="catalog-list__icon-cart" width="20" height="19">
                       <use xlink:href="#icon-cart"></use>
                     </svg>
                   </a>
@@ -196,7 +196,7 @@
     <footer class="page-footer feedback">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo" href="index.html">
-          <svg id="logo-color" width="101" height="34" aria-label="Логотип-ссылка на главную страницу интернет-магазина">
+          <svg width="101" height="34" aria-label="Логотип-ссылка на главную страницу интернет-магазина">
             <use xlink:href="#logo-footer"></use>
           </svg>
         </a>
@@ -259,7 +259,7 @@
             <span class="modal-popup__size">L</span>
           </label>
         </div>
-        <button class="modal-popup__button button modal-close" type="submit">Добавить</button>
+        <button class="modal-popup__button button" type="submit">Добавить</button>
       </form>
     </section>
     <div class="overlay"></div>
