--- a/source/form.html
+++ b/source/form.html
@@ -69,7 +69,9 @@
 
     <main class="page-inner feedback">
       <div class="page-inner__title-wrap">
-        <h1 class="page-inner__title">Вязание на заказ</h1>
+        <div class="wrapper">
+          <h1 class="page-inner__title">Вязание на заказ</h1>
+        </div>
       </div>
 
       <section class="order">
