--- a/source/catalog.html
+++ b/source/catalog.html
@@ -69,7 +69,9 @@
 
     <main class="page-inner feedback">
       <div class="page-inner__title-wrap">
-        <h1 class="page-inner__title">Каталог товаров</h1>
+        <div class="wrapper">
+          <h1 class="page-inner__title">Каталог товаров</h1>
+        </div>
       </div>
 
       <section class="catalog-inner">
@@ -103,6 +105,60 @@
               </div>
             </li>
 
+            <li class="catalog-list__item">
+              <a href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
+
+                  <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+                  <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
+                </picture>
+              </a>
+              <div class="catalog-list__desc">
+                <a class="catalog-list__link" href="#">
+                  <h3 class="catalog-list__name title-inner">Корзинка для белья</h3>
+                </a>
+                <p class="catalog-list__description description-inner">Диаметр 15 см, высота 10 см</p>
+                <div class="catalog-list__wrap">
+                  <span class="catalog-list__price">690 руб.</span>
+                  <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
+                    <svg class="catalog-list__icon-cart" width="20" height="19">
+                      <use xlink:href="#icon-cart"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="catalog-list__item">
+              <a href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
+
+                  <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+                  <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
+                </picture>
+              </a>
+              <div class="catalog-list__desc">
+                <a class="catalog-list__link" href="#">
+                  <h3 class="catalog-list__name title-inner">Корзинка для белья</h3>
+                </a>
+                <p class="catalog-list__description description-inner">Диаметр 15 см, высота 10 см</p>
+                <div class="catalog-list__wrap">
+                  <span class="catalog-list__price">690 руб.</span>
+                  <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
+                    <svg class="catalog-list__icon-cart" width="20" height="19">
+                      <use xlink:href="#icon-cart"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </li>
             <li class="catalog-list__item">
               <a href="#">
                 <picture>
