правки по критериям

--- a/source/form.html
+++ b/source/form.html
@@ -82,7 +82,7 @@
         <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
 
           <fieldset class="order-form__field">
-            <div class="order-form__wrapper wrapper">
+            <div class="order-form__wrapper order-form__wrapper--type wrapper">
               <h3 class="order-form__name order-form__name--type">Тип</h3>
               <ul class="order-form__set">
 
