внесены правки критерий Б11

--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,7 @@
             <table class="promo__specif specif-list">
               <tr class="specif-list__item">
                 <td>Цвет:</td>
-                <td>"Тиффани"/серый</td>
+                <td>«Тиффани»/серый</td>
               </tr>
               <tr class="specif-list__item">
                 <td>Диаметр:</td>
