--- a/source/form.html
+++ b/source/form.html
@@ -166,21 +166,21 @@
               <h3 class="order-form__name order-form__name--fullname">ФИО</h3>
               <ul class="order-form__set order-form__set--fullname">
 
-                <li class="order-form__item order-form__item-fullname">
+                <li class="order-form__item-fullname">
                   <label class="order-form__sign order-form__sign-user title-inner">
                     Имя:
                     <input class="order-form__input-user" type="text" name="first-name" placeholder="Введите ваше имя*" required>
                   </label>
                 </li>
 
-                <li class="order-form__item order-form__item-fullname">
+                <li class="order-form__item-fullname">
                   <label class="order-form__sign order-form__sign-user title-inner">
                     Фамилия:
                     <input class="order-form__input-user" type="text" name="last-name" placeholder="Укажите фамилию*" required>
                   </label>
                 </li>
 
-                <li class="order-form__item order-form__item-fullname">
+                <li class="order-form__item-fullname">
                   <label class="order-form__sign order-form__sign-user title-inner">
                     Отчество:
                     <input class="order-form__input-user" type="text" name="patronymic" placeholder="Отчество, если желаете">
@@ -200,7 +200,7 @@
                     </svg>
                     <input class="order-form__input-user order-form__input-info" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
                   </label>
-                </div>
+              </div>
             </fieldset>
 
             <fieldset class="order-form__field">
@@ -212,19 +212,19 @@
                     </svg>
                     <input class="order-form__input-user order-form__input-info" type="email" name="mail" placeholder="Ваш Email*" required>
                   </label>
-                </div>
+              </div>
             </fieldset>
           </div>
 
           <fieldset class="order-form__field order-form__field--textarea">
             <div class="order-form__wrapper order-form__wrapper--textarea wrapper">
               <h3 class="order-form__name">Доп</h3>
-              <textarea class="order-form__input-user order-form__input-info order-form__textarea" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <textarea class="order-form__input-user order-form__textarea" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </fieldset>
 
           <div class="order-form__wrap wrapper">
-            <span class="order-form__note">*Поля обязательны для заполнения</span>
+            <p class="order-form__note">*Поля обязательны для заполнения</p>
             <button class="order-form__button button" type="submit">Отправить заказ</button>
           </div>
         </form>
